[gd_scene load_steps=2 format=3 uid="uid://cqmhyrne75u45"]

[ext_resource type="Script" uid="uid://dhv4q8qlm0pjw" path="res://scripts/mini_games/mixing/mixing_game.gd" id="1_v7l1b"]

[node name="MixingGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7l1b")

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.144
anchor_right = 0.856
anchor_bottom = 0.356
offset_left = 0.639999
offset_top = 0.319992
offset_right = 0.319946
offset_bottom = -0.320007

[node name="MixingProgress" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.625
anchor_bottom = 0.644
offset_bottom = 8.31995

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.756
anchor_right = 0.475
anchor_bottom = 0.756
offset_left = -448.0
offset_top = -48.32
offset_right = 480.0
offset_bottom = 79.68

[node name="MixingSpeedTimer" type="Timer" parent="."]
